// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleQuestionnaireFooter renders correctly with default props 1`] = `
<div
  className="css-1vcdyb0-ModuleQuestionnaireFooter"
>
  <div
    className="css-1hve3vm-ModuleQuestionnaireFooter"
  >
    <div
      className="css-1a0g2v2-QuestionnaireFooter"
    >
      <div
        className="css-1tvam7u-QuestionnaireFooter"
      >
        <div
          className="css-1lrzij5-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
        <div
          className="css-17zbm7y-Text"
        >
          questionnaire__completed_answers
        </div>
      </div>
      <button
        className="css-noabkp-Button"
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-kuxry5-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
          <div
            className="css-ct844s-Text"
          >
            ButtonLabel
          </div>
        </div>
      </button>
    </div>
    <div
      className="css-133skxv-QuestionnaireChatButton"
    >
      <div
        className="css-17kycot-Icon"
        dangerouslySetInnerHTML={
          {
            "__html": {},
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`ModuleQuestionnaireFooter renders correctly with enabled chat 1`] = `
<div
  className="css-1vcdyb0-ModuleQuestionnaireFooter"
>
  <div
    className="css-1hve3vm-ModuleQuestionnaireFooter"
  >
    <div
      className="css-1a0g2v2-QuestionnaireFooter"
    >
      <div
        className="css-1tvam7u-QuestionnaireFooter"
      >
        <div
          className="css-1lrzij5-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
        <div
          className="css-17zbm7y-Text"
        >
          questionnaire__completed_answers
        </div>
      </div>
      <button
        className="css-noabkp-Button"
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-kuxry5-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
          <div
            className="css-ct844s-Text"
          >
            ButtonLabel
          </div>
        </div>
      </button>
    </div>
    <div
      className="css-14f9hn6-QuestionnaireChatButton"
      onClick={[MockFunction]}
    >
      <div
        className="css-y9gd35-QuestionnaireChatButton"
      >
        <div
          className="css-13nqej6-Text"
        >
          !
        </div>
      </div>
      <div
        className="css-76i6q8-Icon"
        dangerouslySetInnerHTML={
          {
            "__html": {},
          }
        }
      />
    </div>
  </div>
</div>
`;
